# url_shortener_spin

./: Cargo.toml  README.md  spin.toml
index/: Cargo.toml
index/src/: index.html  lib.rs
url-shortener/: Cargo.toml
url-shortener/src/: lib.rs
