[package]
name = "url-shortener"
authors = ["Ch4s3r <lamprecht.patrick1@gmail.com>"]
description = ""
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
spin-sdk = { git = "https://github.com/fermyon/spin", tag = "v2.1.0" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
